package ddproto;
// ProtoHeader 需要在每个 Message 中作为第一个字段
message ProtoHeader {
    optional string version = 1; // 版本号
    optional uint32 userId = 2; // 用户 id
    optional int32 code = 3; // result code
    optional string error = 4; // result error description
}

//这里都是通用过的一些协议
message Heartbeat {
    optional ProtoHeader header = 1;
}

// 微信信息
message WeixinInfo {
    optional string openId = 1; // 微信授权用户唯一id
    optional string nickName = 2; // 微信昵称
    optional string headUrl = 3; // 微信头像
    optional int32 sex = 4; // 性别: 1=男  2=女
    optional string city = 5; // 城市
    optional string unionId = 6; // unionId
}

//登录的结构
message common_req_gameLogin {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 用户id
    optional int32 protoVersion = 3; // 客户端 proto version
    optional WeixinInfo wxInfo = 4; //微信登录信息
}

// 游戏登录回复
message common_ack_gameLogin {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; //用户id
    optional string nickName = 3; //昵称
    optional string roomPassword = 4; // 朋友桌房间密码
    optional int64 costCreateRoom = 5; // 建房消耗钻石数
    optional int64 costRebuy = 6; // Rebuy消耗钻石数(锦标赛)
    optional bool championship = 7; // 是否是锦标赛
    optional int64 chip = 8; // 用户钻石余额
    optional int32 mailCount = 9; // 用户邮件数量:>=0 (DdzAckNotice中type=3对应的信息)
    optional string notice = 10; // 滚动公告的内容
    optional int32 gameStatus = 11; // 0：未游戏  1：正在朋友桌  2：正在锦标赛
}
//客户端请求
message common_req_logout {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 用户id
}

//服务器推
message common_ack_logout {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 用户id
}

